updated template to version 0.1.2

--- a/template/assets/refs.bib
+++ b/template/assets/refs.bib
@@ -28,3 +28,17 @@
     addendum = "(accessed: 01.09.2016)",
     keywords = "latex,knuth"
 }
+
+@phdthesis{madje2022programmable,
+  title={A Programmable Markup Language for Typesetting},
+  author={M{\"a}dje, Laurenz},
+  year={2022},
+  school={2022}
+}
+
+@phdthesis{haug2022fast,
+  title={Fast typesetting with incremental compilation},
+  author={Haug, Martin E},
+  year={2022},
+  school={Master’s thesis, Technische Universit{\"a}t Berlin, Faculty IV—Electrical~…}
+}
